fix: 동료 피드백 부분 height 고정, gap 20px에서 10px로 변경

--- a/style.css
+++ b/style.css
@@ -318,7 +318,6 @@ header {
 
 .feedbackContainer {
     display: flex;
-    width: 100%;
     padding: 80px 0px 120px 0px;
     flex-direction: column;
     justify-content: center;
@@ -336,13 +335,13 @@ header {
 }
 
 .feedback {
+    width: 240px;
     display: flex;
-    width: 30%;
     padding: 10px 39px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 
     border-radius: 10px;
     background: #FAFAFA;
@@ -350,6 +349,7 @@ header {
 }
 
 .feedback p {
+    height: 100px;
     color: #403930;
     font-family: Work Sans;
     font-size: 15px;
@@ -359,6 +359,7 @@ header {
 }
 
 .feedback h5 {
+    height: 10px;
     color: #403930;
     text-align: center;
     font-family: Work Sans;
@@ -372,7 +373,6 @@ header {
     display: flex;
     flex-direction: row;
     gap: 40px;
-
     padding: 50px;
 
 }
